force-app/main/default/objects/Students__c/fields/Record_ID_LInk__c.field-meta.xml
<CustomField>
    <fullName>Record_ID_LInk__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Account__r.Id , &quot;Account Id&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record ID LInk</label>
    <type>Text</type>
</CustomField>