force-app/main/default/objects/Students__c/fields/Website_Link__c.field-meta.xml
<CustomField>
    <fullName>Website_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/&apos;,&apos;Google.com&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website Link</label>
    <type>Text</type>
</CustomField>