force-app/main/default/objects/Students__c/recordTypes/Indian_Employee.recordType-meta.xml
<RecordType>
    <fullName>Indian_Employee</fullName>
    <active>true</active>
    <label>Indian Employee</label>
</RecordType>