force-app/main/default/objects/Students__c/recordTypes/US_Employee.recordType-meta.xml
<RecordType>
    <fullName>US_Employee</fullName>
    <active>true</active>
    <label>US Employee</label>
</RecordType>